--- a/LP_landing_page.html
+++ b/LP_landing_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>中小企業向けAI活用オンライン塾 | 提案書作成を2時間→30分に</title>
-    <meta name="description" content="ChatGPT・Geminiで業務効率10倍。週1回2時間のオンライン講義で、提案書・議事録・見積もりを自動化。先着30社限定で月額3万円。">
+    <meta name="description" content="ChatGPT・Geminiで業務効率10倍。週1回2時間のオンライン講義で、提案書・議事録・見積もりを自動化。1名3万円〜、複数名なら5万円で何名でもOK！">
     <style>
         * {
             margin: 0;
@@ -609,50 +609,46 @@
         <div class="container">
             <h2>料金プラン</h2>
             <div class="pricing-grid">
-                <div class="pricing-card featured">
-                    <div class="plan-name">初回限定プラン</div>
+                <div class="pricing-card">
+                    <div class="plan-name">1名プラン</div>
                     <div class="price">月額3万円</div>
-                    <p class="price-note">先着30社限定</p>
+                    <p class="price-note">個人事業主・お試し向け</p>
                     <ul>
                         <li>週1回ライブ講義（2時間）</li>
                         <li>録画アーカイブ無制限視聴</li>
                         <li>コミュニティ参加</li>
                         <li>AIチャット24時間対応</li>
-                        <li>1社何名でも参加OK</li>
+                        <li><strong>参加人数: 1名のみ</strong></li>
                     </ul>
                     <a href="#demo" class="cta-button">今すぐ申し込む</a>
                 </div>
-                <div class="pricing-card">
-                    <div class="plan-name">スタンダードプラン</div>
+                <div class="pricing-card featured">
+                    <div class="plan-name">複数名プラン</div>
                     <div class="price">月額5万円</div>
-                    <p class="price-note">31社目以降</p>
+                    <p class="price-note">★おすすめ！先着30社限定★</p>
                     <ul>
                         <li>週1回ライブ講義（2時間）</li>
                         <li>録画アーカイブ無制限視聴</li>
                         <li>コミュニティ参加</li>
                         <li>AIチャット24時間対応</li>
-                        <li>1社何名でも参加OK</li>
+                        <li><strong>参加人数: 何名でもOK（同一法人内）</strong></li>
                     </ul>
-                    <a href="#demo" class="cta-button">問い合わせる</a>
-                </div>
-                <div class="pricing-card">
-                    <div class="plan-name">プレミアムプラン</div>
-                    <div class="price">月額10万円</div>
-                    <p class="price-note">個別相談枠付き</p>
-                    <ul>
-                        <li>スタンダードの全機能</li>
-                        <li><strong>+ 月1回個別セッション</strong></li>
-                        <li>カスタマイズ対応</li>
-                        <li>優先サポート</li>
-                    </ul>
-                    <a href="#demo" class="cta-button">問い合わせる</a>
+                    <a href="#demo" class="cta-button">今すぐ申し込む</a>
                 </div>
             </div>
             <p style="text-align: center; margin-top: 40px; color: #999;">
-                ※1社何名でも参加OK（同一法人内）<br>
+                ※複数名プランは2名以上なら断然お得！<br>
                 ※録画は社内共有OK（社外共有NG）<br>
                 ※初月のみ日割り計算可能
             </p>
+            <div style="text-align: center; margin-top: 40px; padding: 30px; background: #f9f9f9; border-radius: 15px; max-width: 800px; margin-left: auto; margin-right: auto;">
+                <h3 style="font-size: 1.5rem; color: #667eea; margin-bottom: 15px;">💼 個別相談・カスタマイズ対応</h3>
+                <p style="font-size: 1.1rem; color: #555; line-height: 1.8;">
+                    社内専用AI構築、業務フロー設計、個別コンサルティングなど、<br>
+                    カスタマイズ対応をご希望の方は別途お見積もりいたします。<br>
+                    <a href="#demo" style="color: #667eea; font-weight: bold; text-decoration: underline;">お気軽にお問い合わせください</a>
+                </p>
+            </div>
         </div>
     </section>
 
@@ -667,7 +663,8 @@
                 </div>
                 <div class="faq-item">
                     <h3>Q2: 何名まで参加できますか？</h3>
-                    <p>同一法人内であれば何名でも参加OKです。社長1名でも、営業部全員でも、料金は同じです。</p>
+                    <p><strong>1名プラン：</strong>1名のみ<br>
+                    <strong>複数名プラン：</strong>同一法人内であれば何名でもOKです。社長1名でも、営業部全員でも、料金は同じです。2名以上なら複数名プランが断然お得です！</p>
                 </div>
                 <div class="faq-item">
                     <h3>Q3: 録画は見られますか？</h3>
@@ -697,7 +694,7 @@
                 <p><strong>日時:</strong> 毎週水曜・金曜 19:00-20:00（Zoom）</p>
                 <p><strong>内容:</strong> 「提案書を5分で作る実演」「質疑応答」</p>
                 <p><strong>参加費:</strong> 無料</p>
-                <p><strong>参加特典:</strong> セミナー参加者限定で初月2万円（通常3万円）</p>
+                <p><strong>参加特典:</strong> セミナー参加者限定で初月1万円割引！</p>
             </div>
             <a href="#" class="cta-button">無料セミナーに申し込む</a>
         </div>
@@ -710,7 +707,7 @@
             <p style="font-size: 1.2rem; margin: 30px 0; color: #555;">
                 AIは難しくありません。<br>
                 正しい使い方を学べば、誰でも業務効率を劇的に改善できます。<br><br>
-                先着30社限定で月額3万円（通常5万円）。<br>
+                1名なら月額3万円、複数名なら月額5万円で何名でもOK！<br>
                 まずは無料デモセミナーで、AIの威力を体感してください。
             </p>
             <a href="#demo" class="cta-button">無料デモセミナーに参加する</a>
