chore(lp): update legal pages and LP copy for AI-juku

--- a/LP_landing_page.html
+++ b/LP_landing_page.html
@@ -1187,7 +1187,7 @@
                 <div class="testimonial-card">
                     <blockquote>
                         商談後の提案書づくりが毎回しんどかったですが、今は「会議メモ→提案書初稿」が30分。<br>
-                        <strong>Before: 2時間 / After: 30分</strong> で、残業が減って受注率も上がりました。
+                        <strong>Before: 2時間 / After: 30分</strong> で、残業が減ってロジカルな提案で受注率も上がりました。
                     </blockquote>
                     <div class="author">営業部長 田中様</div>
                     <div class="company">製造業A社（従業員50名）</div>
@@ -1245,7 +1245,7 @@
     <section class="cta-section" id="demo">
         <div class="container">
             <h2>まずは無料デモセミナーで、<br>AIの威力を体感。</h2>
-            <p>毎週水曜・金曜 19:00-20:00（Zoom）<br>「提案書を5分で作る実演」+ 質疑応答</p>
+            <p>毎週水曜 18:00-19:00（Zoom）<br>「提案書を5分で作る実演」+ 質疑応答</p>
             <a href="#" class="cta-button">無料セミナーに申し込む</a>
         </div>
     </section>
@@ -1254,10 +1254,10 @@
     <footer>
         <p>AI活用実践塾 | 運営: Vanness</p>
         <p>
-            <a href="#">プライバシーポリシー</a>
-            <a href="#">利用規約</a>
-            <a href="#">特定商取引法</a>
-            <a href="#">お問い合わせ</a>
+            <a href="./privacy.html">プライバシーポリシー</a>
+            <a href="./terms.html">利用規約</a>
+            <a href="./tokushoho.html">特定商取引法</a>
+            <a href="./contact.html">お問い合わせ</a>
         </p>
         <p style="margin-top: 20px;">&copy; 2026 AI活用実践塾. All rights reserved.</p>
     </footer>
